@@ -11,4 +11,5 @@ pod_coverage:
   skip: 0
   # format is "Class#method" or "Class",regex allowed
   # for either Class or method.
-  private: []
+  private:
+    - App::Prove::Plugin::SubOnly
