@@ -13,7 +13,7 @@ use Test2::Tools::Subtest ();
 
 =head1 SYNOPSIS
 
- # test only the second subtest
+ # test only the second and third subtest
  % perl -MTest2::Plugin::SubOnly=2 t/foo.t
 
 =head1 DESCRIPTION
